<resources>
    <string name="app_name">Tic Tac Toe (XO AI)</string>
    <string name="splash_name">Tic Tac Toe</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="information">Information</string>
    <string name="wins">Wins:</string>
    <string name="ties">Ties:</string>
    <string name="losses">Losses:</string>
    <string name="reset">Reset</string>
    <string name="CPU_Turn">CPU\'s Turn</string>
    <string name="android">Android:</string>
    <string name="human_text">Human:</string>
    <string name="your_turn">Your Turn</string>
    <string name="its_a_tie">It\'s a Tie</string>
    <string name="you_won">You Won!</string>
    <string name="CPU_won">CPU Won!</string>
</resources>
