<?xml version="1.0" encoding="utf-8"?><!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--tools:context="com.coutinho.brian.tictactoexoai.CpuPlay"--><!--android:background="#C8E6C9">-->
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coutinho.brian.tictactoexoai.CpuPlay">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <TableLayout
            android:id="@+id/playArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="10dp">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/one"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_1"
                    android:textSize="70sp" />

                <Button
                    android:id="@+id/two"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_2"
                    android:textSize="70sp" />

                <Button
                    android:id="@+id/three"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_3"
                    android:textSize="70sp" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/four"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_4"
                    android:textSize="70sp" />

                <Button
                    android:id="@+id/five"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_5"
                    android:textSize="70sp" />

                <Button
                    android:id="@+id/six"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_6"
                    android:textSize="70sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/seven"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_7"
                    android:textSize="70sp" />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_8"
                    android:textSize="70sp" />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/_9"
                    android:textSize="70sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/information"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/wins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins" />

                <TextView
                    android:id="@+id/winsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/ties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ties" />

                <TextView
                    android:id="@+id/tiesCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/losses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/losses" />

                <TextView
                    android:id="@+id/lossescount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>


        <Button
            android:id="@+id/newGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="12sp"
            android:text="@string/reset"
            android:textSize="20sp"
            android:visibility="gone"
            android:enabled="false" />


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_reset"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_refresh_black_48dp"
        app:elevation="10dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp" />

</android.support.design.widget.CoordinatorLayout>